--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "webpack-express-boilerplate",
+  "name": "js-connect-four",
   "version": "0.1.0",
-  "description": "A boilerplate for running a Webpack workflow in Node express",
-  "main": "server.js",
+  "description": "Connect Four built with JavaScript",
+  "main": "./server/server.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/christianalfoni/webpack-express-boilerplate.git"
+    "url": "https://github.com/mackness/connect-four"
   },
   "keywords": [
     "express",
     "webpack",
     "node"
   ],
-  "author": "Christian Alfoni",
+  "author": "Mack Solomon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/christianalfoni/webpack-express-boilerplate/issues"
+    "url": "https://github.com/mackness/connect-four/issues"
   },
-  "homepage": "https://github.com/christianalfoni/webpack-express-boilerplate",
+  "homepage": "https://github.com/mackness/connect-four",
   "scripts": {
     "test": "",
-    "start": "node server",
+    "start": "nodemon ./server/server.js",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "eslint": "eslint .",
     "jscs": "jscs ."
@@ -29,7 +29,8 @@
     "babel-cli": "^6.4.0",
     "lodash": "^4.16.4",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
