--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-connect-four",
+  "name": "connect-four",
   "version": "0.1.0",
   "description": "Connect Four built with JavaScript",
   "main": "./server/server.js",
@@ -28,7 +28,7 @@
   "dependencies": {
     "babel-cli": "^6.4.0",
     "clipboard": "^1.5.15",
-    "express": "^4.14.0",
+    "express": "~4.14.0",
     "lodash": "^4.16.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
